Fix view more button and blurred effect on large screens

--- a/src/components/ListOfItemsContainer/ListOfItemsContainer.scss
+++ b/src/components/ListOfItemsContainer/ListOfItemsContainer.scss
@@ -21,11 +21,6 @@
   z-index: 10;
   transition: color, border-color, 125ms ease-in-out;
 
-  // don't display the button on larger screens to avoid user poor user experience
-  @media (min-width: 576px) {
-    display: none;
-  }
-
   &:hover {
     color: var(--main-white);
     border-color: var(--main-white);
